--- a/modulo1/html-sistema-loja/template-loja/index.css
+++ b/modulo1/html-sistema-loja/template-loja/index.css
@@ -33,7 +33,7 @@ tr{
 }
 .fundo-verde-agua{
 
-    background-color: #00ffff;
+    background-color: #3145f56c;
     display: inline;
   
 }
@@ -60,7 +60,7 @@ header{
 }
 
 .vista-se{
-    color: black;
+    color: rgb(19, 18, 18);
 text-align: center;
   
 
