--- a/modulo1/css-bugfixes/exercicio-bugfixes/index.css
+++ b/modulo1/css-bugfixes/exercicio-bugfixes/index.css
@@ -44,6 +44,8 @@ div img {
     border-radius: 5px;
     font-size: 20px;
     color: white;
+    margin-right: 30px;
+    
 }
 
 .botao-amarelo:hover {
