--- a/modulo1/css-bugfixes/exercicio-bugfixes/index.css
+++ b/modulo1/css-bugfixes/exercicio-bugfixes/index.css
@@ -45,7 +45,10 @@ div img {
     font-size: 20px;
     color: white;
     margin-right: 30px;
-    
+    margin-top: 100px;
+
+   
+   
 }
 
 .botao-amarelo:hover {
@@ -53,8 +56,8 @@ div img {
 }
 
 .container {
-    height: 500px;
-    text-align: center;
+    height: 250px;
+  
 }
 
 .icone {
@@ -75,6 +78,7 @@ div img {
 
 #container-de-descricao>ol {
     padding: 15px 0px;
+   
 }
 
 #container-para-comprar {
@@ -130,3 +134,4 @@ td button {
 #back-button:hover {
     background-color: #635a3d
 }
+
