atualizado o surge: abject-bell.surge.sh

--- a/modulo1/projeto-portfolio/index.css
+++ b/modulo1/projeto-portfolio/index.css
@@ -56,7 +56,20 @@ margin-left:80px;
 .loja1{
 
     margin-left: 30px;  
+    color: rgb(9, 6, 177);
 }
+
+.projeto{
+
+    margin-left:80px;
+}
+
+.projeto1{
+    margin-left: 30px;  
+    color: rgb(9, 6, 177);
+
+}
+
 
 /* ol{
 text-align: center;
