--- a/modulo4/projeto-filmes/src/pages/Favoritos/favoritos.css
+++ b/modulo4/projeto-filmes/src/pages/Favoritos/favoritos.css
@@ -4,6 +4,12 @@
   flex-direction: column;
   align-items: center;
 }
+@media (max-width: 715px) {
+  /* celulares */
+  .meus-filmes {
+    flex-direction: column;
+  }
+}
 
 .meus-filmes h1 {
   margin-top: 14px;
@@ -14,7 +20,7 @@
 }
 
 .meus-filmes ul {
-  width: 720px;
+  width: 70%;
 }
 
 .meus-filmes ul li {
